--- a/Dirtman-Fontend/.eslintrc.json
+++ b/Dirtman-Fontend/.eslintrc.json
@@ -1,25 +1,5 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
   "rules": {
-    "react/prop-types": "off",
-    "no-unused-vars": "warn",
-    "react/react-in-jsx-scope": "off"
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
+    "react/prop-types": "off" // Disable prop-types rule
   }
 }
