--- a/Dirtman-Fontend/package.json
+++ b/Dirtman-Fontend/package.json
@@ -10,14 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-react": "^3.32.1",
     "@fontsource/roboto": "^5.1.1",
+    "@headlessui/react": "^2.2.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "daypilot-pro-react": "^0.0.0",
     "flowbite-react": "^0.10.2",
+    "list": "^2.0.19",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-clock": "^5.1.0",
     "react-datepicker": "^7.6.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-time-picker": "^7.0.0",
+    "timepicker": "^1.14.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -26,9 +35,10 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
+    "eslint": "^9.22.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
